# surikatoko

./: .gitignore  README.md
cpp_impl/: CMakeLists.txt  demo-monoslam-imageseq.json  demo-monoslam-scenario01.json  demo-monoslam-scenario03.json  flagfile-demo-circle-grid.txt  flagfile-demo-davison-mono-slam.txt  flagfile-demo-dino.txt  flagfile-demo-multi-view-factorization.txt
cpp_impl/demos/: CMakeLists.txt  demo-bundle-adj-circle-grid.cpp  demo-bundle-adj-dinosaur.cpp  demo-davison-mono-slam.cpp  demo-multi-view-factorization.cpp  main.cpp  stat-helpers.cpp  stat-helpers.h  visualize-helpers.cpp  visualize-helpers.h
cpp_impl/demos/davison-mono-slam/: demo-davison-mono-slam-ui.cpp  demo-davison-mono-slam-ui.h  demo-davison-mono-slam.cpp
cpp_impl/suriko-engine/: CMakeLists.txt
cpp_impl/suriko-engine/include/suriko/: approx-alg.h  bundle-adj-kanatani.h  config-reader.h  davison-mono-slam.h  eigen-helpers.hpp  lin-alg.h  mat-serialization.h  multi-view-factorization.h  obs-geom.h  quat.h  rand-stuff.h  rt-config-autogen.h.in  rt-config.h  stat-helpers.h  templ-match.h
cpp_impl/suriko-engine/include/suriko/adapt/: tum-dataset.h
cpp_impl/suriko-engine/include/suriko/virt-world/: scene-generator.h
cpp_impl/suriko-engine/src/: auto-project-ellipsoid-on-camera.cpp  bundle-adj-kanatani.cpp  config-reader.cpp  davison-mono-slam.cpp  image-proc.cpp  lin-alg.cpp  mat-serialization.cpp  multi-view-factorization.cpp  obs-geom.cpp  opengl-helpers.cpp  quat.cpp  stat-helpers.cpp
cpp_impl/suriko-engine/src/adapt/: tum-dataset.cpp
cpp_impl/suriko-engine/src/virt-world/: scene-generator.cpp
cpp_impl/suriko-prj/: CMakeLists.txt
cpp_impl/suriko-prj/include/suriko/: approx-alg.h  approx-alg.hpp  bundle-adj-kanatani.h  bundle-adj-kanatani.hpp  davison-mono-slam.h  eigen-helpers.hpp  image-proc.h  mat-serialization.h  mat-serialization.hpp  multi-view-factorization.h  obs-geom.h  obs-geom.hpp  opengl-helpers.h  quat.h  rand-stuff.h  rt-config-autogen.h.in  rt-config.h  templ-match.h
cpp_impl/suriko-prj/include/suriko/virt-world/: scene-generator.h
cpp_impl/suriko-prj/src/: auto-project-ellipsoid-on-camera.cpp.cpp  bundle-adj-kanatani.cpp  davison-mono-slam.cpp  lin-alg.cpp  mat-serialization.cpp  multi-view-factorization.cpp  obs-geom.cpp  opengl-helpers.cpp  quat.cpp  templ-match.cpp
cpp_impl/suriko-prj/src/virt-world/: scene-generator.cpp
cpp_impl/suriko-prj/test/: test-main.cpp
cpp_impl/suriko-test/: CMakeLists.txt  main.cpp  test-bundle-adj-kanatani.cpp  test-config-reader.cpp  test-eigen-helpers.cpp  test-geom.cpp  test-helpers.h  test-infrastructure.cpp  test-obs-geom.cpp  test-quaternion.cpp
matlab/: check_tracker_logs.m
py/: ess_5point_stewenius.py  mvg.py  mvgcv_ch11.py  sampson.py  test_gauss_jordan.py
py_proto/py/: bundle_adjustment_kanatani_impl.py  mvg.py  test_bundle_adjustment_kanatani.py  test_data_builder.py  test_ess_mat.py
py_proto/suriko/: OpenCV_interop.py  bundle_adjustment_kanatani_impl.py  geom_elements.py  la_utils.py  multi_view_factorization.py  mvg.py  obs_geom.py  patch_match.py  test_bundle_adjustment_kanatani.py  test_data_builder.py  test_ess_mat.py  test_gauss_jordan.py  test_templ_matching.py  test_templ_matching_analyze_corr_coef.ipynb  testing.py  uivis.py
testdata/: config-1.json  config-2.json
testdata/oxfvisgeom/: README.md
